# BYTE

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md
ai/: README.md
automation/: README.md
backend/: README.md
database/: README.md
desktop/: README.md  index.html  package-lock.json  package.json
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: ai.rs  auth_commands.rs  auth_db.rs  cache.rs  commands.rs  db.rs  lib.rs  memory.rs  repositories.rs  services.rs  voice.rs
desktop/src/components/layout/: AppLayout.tsx  Dock.tsx  Sidebar.tsx  (+3 more)
desktop/src/hooks/: useKeyboardShortcut.ts  useSystemInfo.ts  useWindowControls.ts
desktop/src/pages/: Chat.tsx  Dashboard.tsx  FileExplorer.tsx  FirstLaunchWizard.tsx  LockScreen.tsx  LoginScreen.tsx  Profile.tsx  RegisterScreen.tsx  Settings.tsx  SplashScreen.tsx  SystemMonitor.tsx  Terminal.tsx  VoiceDashboard.tsx
desktop/src/services/: aiService.ts  dbService.ts  loggingService.ts  memoryService.ts  tauriService.ts  voiceService.ts  workspaceService.ts
desktop/src/stores/: useAppStore.ts  useAuthStore.ts  useCommandStore.ts  useNotificationStore.ts  useThemeStore.ts
desktop/src/types/: db.ts  index.ts
desktop/src/utils/: constants.ts
docs/: API_SPECIFICATION.md  DATABASE_SCHEMA.md  DEVELOPMENT_GUIDELINES.md  PLUGIN_SDK.md  PRODUCT_REQUIREMENTS.md  SYSTEM_ARCHITECTURE.md
frontend/: README.md
memory/: README.md
plugins/: README.md
security/: README.md
vision/: README.md
voice/: README.md
(+27 files in other folders)
