[package]
name = "byte-desktop"
version = "0.1.0"
description = "BYTE - Your Personal AI Operating System"
authors = ["Anik Da"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hostname = "0.4"
sysinfo = "0.30"
rfd = "0.14"
arboard = "3.4"

